# ternary-entropy

./: AGENT.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: FUTURE-INTEGRATION.md
src/: lib.rs
