[package]
name = "ternary-entropy"
version = "0.1.0"
description = "Information-theoretic measures for three-valued distributions {-1, 0, +1}"
authors = ["SuperInstance"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/ternary-entropy"
homepage = "https://github.com/SuperInstance/ternary-entropy"
keywords = ["ternary", "entropy", "information-theory", "shannon"]
categories = ["science", "algorithms"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
libm = { version = "0.2", optional = true }

[features]
default = ["std"]
std = ["clap"]
no_std = ["libm"]

[[bin]]
name = "ternary-entropy-cli"
path = "src/bin/entropy-cli.rs"
required-features = ["std"]

[lib]
name = "ternary_entropy"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
